# pytest-pretty

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
pytest_glucose/: __init__.py
pytest_pretty/: __init__.py
requirements/: all.txt  linting.in  linting.txt  pyproject.txt
tests/: test_simple.py
